
2009-04-20 (dazjorz)
 * Exported comment view to a Smarty template.
 * Templatized (that word was just made up by Valerio) the remarks display and
 the newremarks form.
 * Templatized the options page.
 * Fixed comment.php not setting developer correctly.
 * Added install.php checking if a LikeBack table exists and dieing if there
 is one, for safety.
 * Made getSmartyObject() put all of $developer in Smarty, instead of just the
 login name, and made the $developer argument compulsatory.
 * Fixed warning in view.php.
 * (Awfully) templatized the filtering options in view.php, and moved them from the
 header bar to above the items.
 * Moved the AJAX stuff in view.php to ajax.php.
 * Made options.php the file to save options, not view.php.
 * Added stub sendMailTo function to functions.php to easily fix it later if
 it's needed.
 * Fixed the viewfilters.tpl file: it didn't have a <form> tag, it does now.
 * Fixed view.php: it had a <form> tag (see above) and a non-closed header p
 tag.
 * Fixed a double escape in header.php.
 * Removed warning in options.php.
 * Templatized the bottom of all pages.
 * Removed noRemark flag for comments without remarks, it did nothing.
 * Templatized the status menu, the likeback header and the sub-bar.
 * Fully templatized the comment table in view.php.
 * Fixed bug in newremark.tpl where the page wouldn't be set over remark adds.
 * Added smarty wrappers for iconForType and iconForStatus.

--- LikeBack v1.1 released ---

2009-04-19 (dazjorz)
 * Implemented templates support using Smarty in comments.php. More to come.
 * Made *some queries* in comments.php, header.php SQL injection-safe.
 * Fixed an isset/empty issue when adding new LikeBack comment remarks.
 * Modified the e-mail sent to the user (see the Smarty template).
 * Added output buffering in header.php so header() calls work correctly.
 * Added LIKEBACK_PROJECT and LIKEBACK_VERSION to the configuration.